fix: overflow: visible

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -6000,6 +6000,6 @@ $item: 5;
 
 }
 
-.needsclick {
+.needsclick.kl-teaser-SyCsSf.undefined.kl-private-reset-css-Xuajs1 {
 	width: 100px !important;
 }
